# systemic_rejuvenation

./: README.md  README.md.bak  model.ipynb  model.py  pyproject.toml  repomix-output.txt
.claude/: settings.local.json
data/processed/: synthetic_test.csv
data/raw/synthetic_elsa/: mortality.csv  wave_1_core.csv  wave_2_core.csv  wave_3_core.csv  wave_4_core.csv
examples/: run_demo.py
notebooks/: 01_exploration.ipynb  02_main_results.ipynb
openspec/: project.md
openspec/changes/add-aggregate-intervention-views/: proposal.md  tasks.md
openspec/changes/add-interactive-frontend/: design.md  proposal.md  tasks.md
openspec/changes/add-parameter-calibration/: design.md  proposal.md  tasks.md
openspec/changes/refactor-interactive-frontend-model-sync/: design.md  proposal.md  tasks.md
src/aging_network/: __init__.py  model.py  simulation.py
src/aging_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: AboutModal.tsx  AggregateOverlay.tsx  Header.tsx  InterventionSummaryTable.tsx  InterventionTabs.tsx  MetricsPanel.tsx  MonteCarloPanel.tsx  NetworkGraph.tsx  ParameterPanel.tsx  SimulationEngine.tsx  TrajectoryChart.tsx
web/lib/: pyodide-loader.ts  types.ts
web/public/py/: model-manifest.json
web/public/py/aging_network/: __init__.py  config.py  interventions.py  plotting.py
web/scripts/: check-aging-network-model-sync.js  sync-aging-network-model.js
(+4 files in other folders)
